Fixes for theme

--- a/ux/container/ButtonSegment.css
+++ b/ux/container/ButtonSegment.css
@@ -1,29 +1,29 @@
 .x-sbtn .x-btn
 {
-	margin-right: 0px;
-	margin-left: 0px;
+	margin-right: 0px !important;
+	margin-left: 0px !important;
 }
 
 .x-sbtn .x-sbtn-first
 {
-	-moz-border-radius: 3px 0px 0px 3px;
-	-webkit-border-radius: 3px 0px 0px 3px;
-	-o-border-radius: 3px 0px 0px 3px;
-	-ms-border-radius: 3px 0px 0px 3px;
-	-khtml-border-radius: 3px 0px 0px 3px;
-	border-radius: 3px 0px 0px 3px;
+	-moz-border-radius: 5px 0px 0px 5px;
+	-webkit-border-radius: 5px 0px 0px 5px;
+	-o-border-radius: 5px 0px 0px 5px;
+	-ms-border-radius: 5px 0px 0px 5px;
+	-khtml-border-radius: 5px 0px 0px 5px;
+	border-radius: 5px 0px 0px 5px;
 	
 	margin-left: 0px;
 }
 
 .x-sbtn .x-sbtn-last
 {
-	-moz-border-radius: 0px 3px 3px 0px;
-	-webkit-border-radius: 0px 3px 3px 0px;
-	-o-border-radius: 0px 3px 3px 0px;
-	-ms-border-radius: 0px 3px 3px 0px;
-	-khtml-border-radius: 0px 3px 3px 0px;
-	border-radius: 0px 3px 3px 0px;
+	-moz-border-radius: 0px 5px 5px 0px;
+	-webkit-border-radius: 0px 5px 5px 0px;
+	-o-border-radius: 0px 5px 5px 0px;
+	-ms-border-radius: 0px 5px 5px 0px;
+	-khtml-border-radius: 0px 5px 5px 0px;
+	border-radius: 0px 5px 5px 0px;
 	
 	border-left: none;
 	margin-right: 0px;
@@ -57,7 +57,7 @@
 {
 	padding-right: 3px;
 	padding-left: 3px;
-	border-right: 1px solid #D1D1D1;
+	border-right: 1px solid #C1BCAD;
 }
 
 
@@ -88,7 +88,7 @@
 .x-sbtn .x-sbtn-first td.x-frame-bc
 {
 	padding-right: 3px;
-	border-right: 1px solid #D1D1D1;
+	border-right: 1px solid #C1BCAD;
 }
 
 
